--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 #-------------------------------
 # General Site Settings
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://komikeros.com" # the base hostname & protocol for your site, e.g. http://example.com
+s3_url: "https://dip7ok9f0gqax.cloudfront.net"
 
-s3_url: none
 
 #-------------------------------
 # Build Settings
