--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -109,7 +109,7 @@ contact:
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus_identifier: Your Disqus shortname # Add your shortname for Disqus Comment.
+disqus_identifier: # Add your shortname for Disqus Comment.
 
 
 #-------------------------------
