--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -85,7 +85,7 @@ social:
 #-------------------------------
 # Newsletter Settings
 mailchimp_settings:
-  enable: true
+  enable: false
   mailchimp_title: Get interesting news
   mailchimp_description: Subscribe to our newsletter and we’ll send you the emails of latest posts.
   mailchimp_identifier: Your form identifier
