Remove old branding

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -86,8 +86,8 @@ social:
 # Newsletter Settings
 mailchimp_settings:
   enable: false
-  mailchimp_title: Get interesting news
-  mailchimp_description: Subscribe to our newsletter and we’ll send you the emails of latest posts.
+  mailchimp_title: Your title
+  mailchimp_description: Your description
   mailchimp_identifier: Your form identifier
   mailchimp_input_text: Your email address
   mailchimp_button_text: Subscribe
