--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -35,8 +35,8 @@ cta_button:
 # Hero Settings
 hero:
   enable: true
-  hero_title: One Stop Daily News, Article, Inspiration, and Tips.
-  hero_description: Features productivity, tips, inspiration and strategies for massive profits. Find out how to set up a successful blog or how to make yours even better!
+  hero_title: Komikeros Library
+  hero_description: A free public library for komiks.
 
 
 #-------------------------------
@@ -70,7 +70,7 @@ authors_section:
 
 #-------------------------------
 # Footer Settings
-footer_description: Features productivity, tips, inspiration and strategies for massive profits. Find out how to set up a successful blog or how to make yours even better!
+footer_description: A free public library for komiks.
 
 
 # Social Links
