--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -65,7 +65,7 @@ tags_section:
 # Authors Section Settings
 authors_section:
   enable: true
-  section_title: Meet our authors
+  section_title: Komikeros
 
 
 #-------------------------------
