--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,47 @@
 _site
+.bundle
 .sass-cache
 .jekyll-cache
 .jekyll-metadata
-.DS_Store
+.DS_store
+.ruby-version
+.tweet-cache
+Gemfile.lock
+vendor
+
+### Linux ###
+*~
+.fuse_hidden*
+.Trash-*
+.nfs*
+
+### MacOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### Windows ###
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
