Add horror, superhero tags

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -51,8 +51,10 @@ tags_section:
     - tag: "experimental"
     - tag: "fantasy"
     - tag: "historical"
+    - tag: "horror"
     - tag: "romance"
     - tag: "sci-fi"
+    - tag: "superhero"
     - tag: "classic"
     - tag: "indie"
     - tag: "preview"
