Update menu, create tags page

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,22 +11,26 @@ color_scheme: auto # You can choose three modes auto, light, and dark. By defaul
 # Navigation Settings
 menu_settings:
   menu_items:
-    - title: "Authors"
-      url: "/authors/"
-    - title: "Pages"
+    - title: "Browse"
       submenu:
-      - url: "/about/"
-        title: "About"
-      - url: "/contact/"
-        title: "Contact"
-      - url: "/featured/"
-        title: "Featured"
+      - title: "By Creator"
+        url: "/creators"
+      - title: "By Tag"
+        url: "/tags"
+      - title: "All Comics"
+        url: "/all-comics"
+    - title: "About"
+      url: "/about"
+    - title: "Submit"
+      url: "/submit"
+    - title: "Contact"
+      url: "/contact"
 
 # Call to action button
 cta_button:
-  enable: false
-  cta_button_link: '/contact/'
-  cta_button_text: Get in touch
+  enable: true
+  cta_button_link: "https://blog.komikeros.com"
+  cta_button_text: Blog
 
 
 #-------------------------------
@@ -40,7 +44,6 @@ hero:
 #-------------------------------
 # Tags Section Settings
 tags_section:
-  enable: true
   number_posts: 4 # To control how many posts to show under each tag section, set the value to a number. Three is the default.
   number_columns: 4 # You can specify the number of columns from 1-4 for large screen resolution. By default, the theme uses three columns grid.
   tags:
