Make 'comic' layout the default for files in /pages

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,8 @@ defaults:
       path: ""
       type: "pages"
     values:
-      layout: "page"
+      layout: "comic"
+      last: false
   - scope:
       path: ""
       type: "posts"
