Update post frontmatter default values

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,9 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+      year_end: false
+      ongoing: false
+      feature: false
   - scope:
       path: ""
       type: "authors"
