Move creators' profiles behind /creators/ path

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ collections:
     permalink: /:slug
   authors:
     output: true
-    permalink: /:name
+    permalink: /creators/:name
 
 # Pages Path
 defaults:
