Exclude comic pages from sitemap by default

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ defaults:
     values:
       layout: "comic"
       last: false
+      sitemap: false
   - scope:
       path: ""
       type: "posts"
